Fix content alignment

--- a/src/frontend/styles/container.css
+++ b/src/frontend/styles/container.css
@@ -11,7 +11,6 @@
   border-style: solid;
   border-radius: 8px;
   margin: 3px;
-  overflow: visible;
   white-space: nowrap;
 }
 
@@ -20,7 +19,10 @@
 }
 
 .subsection {
+  display: flex;
+  flex-direction: column;
   flex: 1;
+  overflow: visible;
 }
 
 .box,
