--- a/src/frontend/styles/diagram.css
+++ b/src/frontend/styles/diagram.css
@@ -8,8 +8,7 @@
 }
 
 .diagram {
-  display: flex;
-  height: 250px;
+  min-height: 300px;
 }
 
 #mapTitel {
